--- a/quienvaganando/templates/quienvaganando/editar_participantes.html
+++ b/quienvaganando/templates/quienvaganando/editar_participantes.html
@@ -4,7 +4,6 @@
 
 {% load crispy_forms_tags %}
 {% block content %}
-<a href="{% url 'overview_torneo' uuid_torneo %}" class="btn btn-outline-dark volver"><i class="fas fa-arrow-left"></i> Volver al Torneo</a>
 <head>
     <style>
     .alert {
@@ -20,13 +19,13 @@
     }
     </style>
   
-  </head>
+</head>
+<body>
+<a href="{% url 'overview_torneo' uuid_torneo %}" class="btn btn-outline-dark volver"><i class="fas fa-arrow-left"></i> Volver al Torneo</a>
 
-  <h1 style="text-align: center;">Editar Participantes</h1>
+<h1 style="text-align: center;">Editar Participantes</h1>
 
-<p>
-    <h4 style="text-align: center;">Modifica el nombre de los participantes que desees</h4>
-</p>
+<h5 style="text-align: center; margin-top: 20px;">Modifica el nombre de los participantes que desees</h5>
 
 <div style="display: flex; justify-content: center;">
 <form method="post">
@@ -41,4 +40,5 @@
     <button class="btn btn-info" name="Guardar" type="submit">Guardar Cambios</button>
 </form>
 </div>
+
 {% endblock content %}
