--- a/quienvaganando/templates/quienvaganando/overview_torneo.html
+++ b/quienvaganando/templates/quienvaganando/overview_torneo.html
@@ -10,7 +10,7 @@
     display: flex;
     gap: 50px
   }
-  .table-container{
+  .scrollable{
     width: 100%;
     overflow-x: auto;
     overflow-y: auto;
@@ -40,7 +40,7 @@
     <button class="btn btn-info" onclick="window.location.href='{%url 'editar_torneo' uuid_torneo=torneo.uuid %}'">Editar Torneo <i class="fas fa-edit"></i></button>
     <button class="btn btn-info" onclick="window.location.href='{%url 'agregar_evento' uuid_torneo=torneo.uuid %}'">Agregar Evento <i class="fas fa-plus"></i></button>
     <button class="btn btn-info" onclick="window.location.href='{%url 'agregar_participante' uuid_torneo=torneo.uuid %}'">Agregar Participante <i class="fas fa-plus"></i></button>
-    <button class="btn btn-info" onclick="window.location.href='{%url 'editar_participantes' uuid_torneo=torneo.uuid %}'">Editar Participantes <i class="fas fa-plus"></i></button>
+    <button class="btn btn-info" onclick="window.location.href='{%url 'editar_participantes' uuid_torneo=torneo.uuid %}'">Editar Participantes <i class="fas fa-edit"></i></button>
   </div>
   {% endif %}
   <h2 style="font-family: 'DM Sans', sans-serif; text-align: center; margin-top: 10px;">
@@ -55,7 +55,7 @@
     <div class="row mt-auto  ">
       <!-- Columna para la tabla -->
       <div class="col-7" style="font-family: 'DM Sans', sans-serif;">
-        <div class="table-container">
+        <div class="scrollable">
           <table class="table ">
             <thead>
               <tr class="table-primary">
@@ -78,16 +78,18 @@
       </div>
       <div class="col-5 "  style="font-family: 'DM Sans', sans-serif;">
         <h4 class="fw-bold  text-danger fs-2"  >EVENTOS:</h4>
-        <ul class="list-group" style="width: max-content;">
-          {% for evento in eventos %}
-          <li class="list-group-item d-flex justify-content-between align-items-center;">
-            {{ evento }}
-            <button type="button" onclick="window.location.href='{% url 'overview_evento' torneo.uuid evento %}'" class="btn btn-info btn-sm">
-              <i class="fas fa-eye fa-xs"></i>
-            </button>
-        </li>
-          {% endfor %}
-        </ul>
+        <div>
+          <ul class="list-group" style="width: max-content;">
+            {% for evento in eventos %}
+            <li class="list-group-item d-flex justify-content-between align-items-center;">
+              {{ evento }}
+              <button type="button" onclick="window.location.href='{% url 'overview_evento' torneo.uuid evento %}'" class="btn btn-info btn-sm">
+                <i class="fas fa-eye fa-xs"></i>
+              </button>
+            </li>
+            {% endfor %}
+          </ul>
+      </div>
       </div>
     </div>
   
