--- a/quienvaganando/templates/quienvaganando/overview_evento.html
+++ b/quienvaganando/templates/quienvaganando/overview_evento.html
@@ -41,6 +41,7 @@
   {% if is_owner %}
     <button class="btn btn-info" onclick="window.location.href='{% url 'eliminar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Eliminar Evento <i class="fas fa-trash-alt"></i></button>
     <button class="btn btn-info" onclick="window.location.href='{% url 'editar_evento' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Editar Evento <i class="fas fa-edit"></i></button>
+    <button class="btn btn-info" onclick="window.location.href='{% url 'editar_puntajes' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Editar Puntajes <i class="fa-solid fa-medal"></i></button>
     <button class="btn btn-info" onclick="window.location.href='{% url 'agregar_partido' uuid_torneo=uuid_torneo nombre_evento=nombre_evento %}'">Agregar Partido <i class="fas fa-plus"></i></button>
   {% endif %}
   </div>
