--- a/quienvaganando/templates/quienvaganando/overview_evento.html
+++ b/quienvaganando/templates/quienvaganando/overview_evento.html
@@ -119,7 +119,7 @@
                     </form>
                   </td>
                   <td class="fs-5" >
-                    <form action="{% url 'editar_partido' uuid_torneo nombre_evento partido.id %}" method="post">
+                    <form action="{% url 'editar_partido' uuid_torneo nombre_evento partido.id %}" method="get">
                       {% csrf_token %}
                       <button type="submit" class="btn btn-info btn-sm">
                           <i class="fas fa-edit"></i>
@@ -171,7 +171,7 @@
                   </form>
                 </td>
                 <td class="fs-5" >
-                  <form action="{% url 'editar_partido' uuid_torneo nombre_evento partido.id %}" method="post">
+                  <form action="{% url 'editar_partido' uuid_torneo nombre_evento partido.id %}" method="get">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-info btn-sm">
                         <i class="fas fa-edit"></i>
